--- a/figma/contact.html
+++ b/figma/contact.html
@@ -17,12 +17,12 @@
         </div>
     <div class="imacons">
         <div class="links">
-            <a href="home.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="our.html">Our Menu</a>
-            <a href="contact.html">Pages</a>
-            <a href="contact.html">Blog</a>
-            <a href="blog.html">Contact Us</a>
+            <a href="#">Home</a>
+            <a href="#" >About Us</a>
+            <a href="#" >Our Menu</a>
+            <a href="#" >Pages</a>
+            <a href="#" style="color: #E1B168;">Blog</a>
+            <a href="#">Contact Us</a>
         </div>
             <div class="icons">
                 <a href="#"><img src="./icons/IMAGE (1).svg" alt=""></a>
