--- a/DOM-3/Task-2/index.html
+++ b/DOM-3/Task-2/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <button class="buttons" id="red"></button>
-     <button class="buttons" id="green"></button>
-     <button class="buttons" id="blue"></button>
-     <button class="buttons" id="purple"></button>
-
-
-    <script src="app.js"></script>
+    
+   <div id="time"></div>
+    <script src="./app.js"></script>
 </body>
 </html>
