--- a/DOM-3/Task-3/index.html
+++ b/DOM-3/Task-3/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<button id="btn">dark mode</button>
-<div class="div"><h1>Hİ USER</h1>
+    <input type="text" id="user">
+<button id="btn" class="button">dark mode</button>
+<div class="div"><h1 id="h"></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti corporis modi fugit, sint aliquam deserunt temporibus ut libero! Dolor, enim? Nulla itaque laudantium odit quis cupiditate quae iusto quidem doloremque.</p></div>
 
     <script src="./app.js"></script>
