--- a/To-Do List/index.html
+++ b/To-Do List/index.html
@@ -10,7 +10,7 @@
     <div class="div" id="div">
       <div class="div2">
         <input type="text" id="input" placeholder="Tasks" >
-        <button id="button">Add</button>
+        <button onclick="depola()" id="button">Add</button>
       </div>
      
       
