--- a/Fake Server/Frontend/login.html
+++ b/Fake Server/Frontend/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="login">
         <div class="logo">
-            UserApp
+            <a href="index.html">UserApp</a>
         </div>
       <div class="divv">
         <div class="div1"><a href="./login.html">Log in</a></div>
