--- a/Fake Server/Frontend/index.html
+++ b/Fake Server/Frontend/index.html
@@ -13,7 +13,7 @@
            <a href="index.html">UserApp</a>
         </div>
       <div class="divv">
-        <div class="div1"><a href="./login.html">Log in</a></div>
+        <div class="div1"><a href="./">Log in</a></div>
         
         <div class="div2"><a href="./index.html">users</a></div>
       </div>
