--- a/AYtap.az/Frontend/index.html
+++ b/AYtap.az/Frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
+
     <header>
         
          <div class="container">
@@ -23,7 +24,7 @@
     </header>
 
     <main>
-        <div id="cards">
+        <div id="cards"></div>
        
     </main>
    
