--- a/AYtap.az/Frontend/profile.html
+++ b/AYtap.az/Frontend/profile.html
@@ -20,6 +20,11 @@
         <input id="username" placeholder="Username" type="text">
         <input id="password" placeholder="password" type="text">
         <button id="daxilol">Daxil Ol</button>
+      <div class="sign">
+        <div class="text"><p>Hesabınız yoxdur?</p></div>
+        <a href="./signup.html"> <div class="sbutton">Qeydiyyat</div></a>
+       
+      </div>
       </div>
         </div>
         
