--- a/AYtap.az/Frontend/addcar.html
+++ b/AYtap.az/Frontend/addcar.html
@@ -12,13 +12,13 @@
     <h1>ADD CAR</h1>
 <div class="boxes">
     <div class="box">
-        <input placeholder="brand" id="brand" type="text">
-        <input placeholder="model" id="model" type="text">
-        <input placeholder="image" id="image" type="text">
-        <input placeholder="engine" id="engine" type="text">
-        <input placeholder="kilometers" id="kilometers" type="text">
-        <input placeholder="price" id="price" type="text">
-        <input placeholder="currency" id="currency" type="text">
+        <input autocomplete="off" placeholder="brand" id="brand" type="text">
+        <input autocomplete="off" placeholder="model" id="model" type="text">
+        <input autocomplete="off" placeholder="image" id="image" type="text">
+        <input autocomplete="off" placeholder="engine" id="engine" type="text">
+        <input autocomplete="off" placeholder="kilometers" id="kilometers" type="text">
+        <input autocomplete="off" placeholder="price" id="price" type="text">
+        <input autocomplete="off" placeholder="currency" id="currency" type="text">
         <button id="add">Add</button>
         <button id="geri">Geri</button>
     </div>
