--- a/AYtap.az/Frontend/profile.html
+++ b/AYtap.az/Frontend/profile.html
@@ -17,8 +17,8 @@
       
       <div class="box">
       <div class="input">
-        <input id="username" placeholder="Username" type="text">
-        <input id="password" placeholder="password" type="text">
+        <input autocomplete="off" id="username" placeholder="Username" type="text">
+        <input autocomplete="off"id="password" placeholder="password" type="text">
         <button id="daxilol">Daxil Ol</button>
       <div class="sign">
         <div class="text"><p>Hesabınız yoxdur?</p></div>
