--- a/AYtap.az/Frontend/signup.html
+++ b/AYtap.az/Frontend/signup.html
@@ -14,9 +14,9 @@ https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.min.css
   <div class="container">
     <h1>SİGN UP</h1>
     <div class="box">
-        <input id="name" type="text" placeholder="Name">
-        <input id="username" type="text" placeholder="UserName">
-        <input id="pass" type="password" placeholder="password">
+        <input autocomplete="off" id="name" type="text" placeholder="Name">
+        <input autocomplete="off" id="username" type="text" placeholder="UserName">
+        <input autocomplete="off" id="pass" type="password" placeholder="password">
 
     <div class="buttons">
         
