--- a/AYtap.az/Frontend/addcar.html
+++ b/AYtap.az/Frontend/addcar.html
@@ -23,7 +23,9 @@
         <button id="geri">Geri</button>
     </div>
 </div>
-
+<script src="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.all.min.js
+"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js" integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/addcar.js"></script>
 </body>
