--- a/AYtap.az/Frontend/profile.html
+++ b/AYtap.az/Frontend/profile.html
@@ -28,9 +28,7 @@
       </div>
         </div>
         
-        <div class="cardata">
-       
-        </div>
+        <div class="cardata"></div>
      </div>
 
   
